--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "description": "",
   "main": "handler.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "erluqadev@gmail.com",
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.808.0",
+    "swapi-node": "^0.6.0",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3"
   }
 }
