--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "handler.js",
   "scripts": {
+    "deploy": "sls deploy",
     "test": "jest"
   },
   "keywords": [],
